--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
 
+
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+
+    <!-- Import google font roboto condensed -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet"/>
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
