--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <!-- New Tweet CSS -->
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <!-- Tweet section CSS -->
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -25,6 +27,7 @@
     <script type="text/javascript" src="/scripts/app.js"></script>
     <!-- Character counter JS -->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
   </head>
 
   <body>
@@ -44,6 +47,32 @@
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
+      </section>
+      <section id="tweets">
+        <article class="tweetsArticle">
+          <header>
+            <img class="profilepic" src = "https://avatars2.githubusercontent.com/u/11719346?s=460&v=4">
+
+            </img>
+            <h3>
+              Lovemore Jokonya
+            </h3>
+            <h4>
+              @LoveJ
+            </h4>
+          </header>
+          <content>
+            <p>
+              Little Tweet here ghfjhgdf dfjhgf hgfhhgjfhjgf jhf jhf jfh uhj fgjkf jkh
+            </p>
+          </content>
+          <footer>
+            10 Days ago
+            <img class="icons" src="/images/heart.svg"> </img>
+            <img class="icons" src="/images/retweet.svg"> </img>
+            <img class="icons" src="/images/flag.svg"> </img>
+          </footer>
+        </article>
       </section>
     </main>
 
