--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form name="tweet" action="/tweets" method="POST">
+        <form id="tweetForm" action="/tweets" method="POST">
           <textarea name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
