--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
         <h2>Compose Tweet</h2>
         <form id="tweetForm" action="/tweets" method="POST">
           <textarea name="text" placeholder="What are you humming about?"></textarea>
+          <p id="errorMessage"> </p>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
