--- a/public/index.html
+++ b/public/index.html
@@ -36,14 +36,15 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button src="/images/compose.svg" class="composeButton" id="compose" > Compose </button>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <section class="new-tweet">
+      <section id="new-tweet" class="new-tweet">
         <h2>Compose Tweet</h2>
         <form id="tweetForm" action="/tweets" method="POST">
-          <textarea name="text" placeholder="What are you humming about?"></textarea>
+          <textarea id="tweetTextBox" name="text" placeholder="What are you humming about?"></textarea>
           <p id="errorMessage"> </p>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
